--- a/base_index.html
+++ b/base_index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <title>Portfolio website </title>
 </head>
 
 <body>
-  <p> this is my Portfolio website</p>
+  <h1> My Portfolio website</h1>
 
 </body>
 
